src/test/deca/codegen/extension/valid/oracle/TAB_new_arrays.deca
{
    new float[2][4];
    new float[5];
    new int[4];
    new int[8][2];
}