src/test/deca/codegen/extension/invalid/oracle/TAB_access_invalid_index5.deca
{
    float[] f = new float[8];
    f[8];
}